feat: adding model brand for subtype to display based on model instead of provider (#2263)